Solución de 2019/1/MAT1610/5

--- a/2019/1/MAT1610/5/solucion.tex
+++ b/2019/1/MAT1610/5/solucion.tex
@@ -232,7 +232,7 @@ $$(g^{-1} \circ f)'(2) = 3\dfrac{1}{g'(4)} = \dfrac{3}{2}$$
 \begin{solucion}
 Acorde al enunciado, lo que tenemos es
 \begin{center}
-\includegraphics[]{cono.png}
+\includegraphics[]{cono.PNG}
 \end{center}
 Los datos que tenemos son los siguientes:\\
 En primer lugar, sabemos que el agua varía 9 $m^3/min$, es decir $\dfrac{dV}{dt} = 9$\\
