Enunciado de 2019/1/MAT1203/5

--- a/2019/1/MAT1203/5/enunciado.tex
+++ b/2019/1/MAT1203/5/enunciado.tex
@@ -108,5 +108,13 @@
 \end{center}
 
 \begin{preguntas}
+\item Determinar las condiciones en $a$ para que la matriz
+	$$A = \begin{bmatrix}
+	a & 2a & 0 & 0 \\
+	0 & 1 & 0 & 3a-1\\
+	0 & 1 & a-1 & 2a-1\\
+	a & 2a & 0 & a
+	\end{bmatrix}$$
+	sea invertible
 \end{preguntas}
 \end{document}
