Enunciado de 2019/1/MAT1203/5

--- a/2019/1/MAT1203/5/enunciado.tex
+++ b/2019/1/MAT1203/5/enunciado.tex
@@ -108,6 +108,7 @@
 \end{center}
 
 \begin{preguntas}
+\item Demuestre que el conjunto $\{u, v, w\}$ es L.I. si y solo si el conjunto $\{u+v, u+w, v+w\}$ es L.I.
 \item Determinar las condiciones en $a$ para que la matriz
 	$$A = \begin{bmatrix}
 	a & 2a & 0 & 0 \\
