--- a/2019/1/MAT1203/5/enunciado.tex
+++ b/2019/1/MAT1203/5/enunciado.tex
@@ -109,6 +109,10 @@
 
 \begin{preguntas}
 \item Demuestre que el conjunto $\{u, v, w\}$ es L.I. si y solo si el conjunto $\{u+v, u+w, v+w\}$ es L.I.
+\item Sea $A$ una matriz de $4 \times 4$ tal que $A=\begin{bmatrix}a_1 & 2a_1 & a_2 & a_1-a_2\end{bmatrix}$ con $a_1, a_2 \in \R^4$ vectores linealmente independientes, y sea $B$ una matriz inyectiva de $4 \times 2$ tal que $A \cdot B = 0$. Determine una matriz con las características de $B$.
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
 \item Determinar las condiciones en $a$ para que la matriz
 	$$A = \begin{bmatrix}
 	a & 2a & 0 & 0 \\
