Solución de 2019/1/MAT1203/5

--- a/2019/1/MAT1203/5/solucion.tex
+++ b/2019/1/MAT1203/5/solucion.tex
@@ -153,6 +153,16 @@ Como nos dicen si y solo si, debemos demostrar en ambas direcciones
 		Luego, $\{u, v, w\}$ es L.I.
 		$$q.e.d$$
 \end{solucion}
+\item Sea $A$ una matriz de $4 \times 4$ tal que $A=\begin{bmatrix}a_1 & 2a_1 & a_2 & a_1-a_2\end{bmatrix}$ con $a_1, a_2 \in \R^4$ vectores linealmente independientes, y sea $B$ una matriz inyectiva de $4 \times 2$ tal que $A \cdot B = 0$. Determine una matriz con las características de $B$.
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\end{solucion}
 \item Determinar las condiciones en $a$ para que la matriz
 	$$A = \begin{bmatrix}
 	a & 2a & 0 & 0 \\
