Enunciado de 2019/1/MAT1203/5

--- a/2019/1/MAT1203/5/enunciado.tex
+++ b/2019/1/MAT1203/5/enunciado.tex
@@ -121,5 +121,6 @@
 	a & 2a & 0 & a
 	\end{bmatrix}$$
 	sea invertible
+\item Sea $T: \R^7 \ra \R^9$ una transformación lineal. Suponga que el conjunto $\{u,v\}$ es linealmente independiente en $\R^7$ pero $\{T(u), T(v)\}$ es linealmente dependiente. Demuestre que la ecuación $T(x)=0$ admite soluciones no triviales.
 \end{preguntas}
 \end{document}
