Solución de 2019/1/MAT1203/5

--- a/2019/1/MAT1203/5/solucion.tex
+++ b/2019/1/MAT1203/5/solucion.tex
@@ -200,5 +200,9 @@ Recordemos que el que una matriz sea invertible es equivalente a que esta tenga 
 		En resumen, las condiciones son
 		$$a \neq 0, \quad a \neq 1$$
 \end{solucion}
+\item Sea $T: \R^7 \ra \R^9$ una transformación lineal. Suponga que el conjunto $\{u,v\}$ es linealmente independiente en $\R^7$ pero $\{T(u), T(v)\}$ es linealmente dependiente. Demuestre que la ecuación $T(x)=0$ admite soluciones no triviales.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
