Enunciado de 2019/1/MAT1203/5

--- a/2019/1/MAT1203/5/enunciado.tex
+++ b/2019/1/MAT1203/5/enunciado.tex
@@ -119,5 +119,13 @@
 	\end{bmatrix}$$
 	sea invertible
 \item Sea $T: \R^7 \ra \R^9$ una transformación lineal. Suponga que el conjunto $\{u,v\}$ es linealmente independiente en $\R^7$ pero $\{T(u), T(v)\}$ es linealmente dependiente. Demuestre que la ecuación $T(x)=0$ admite soluciones no triviales.
+\item Determine si las siguientes afirmaciones son verdaderas o falsas. En caso de ser verdaderas demuéstrelas y si son falsas de un contraejemplo.
+\begin{enumerate}[a)]
+\item Si $\{v_1, v_2, v_3\}$ es un conjunto linealmente dependiente de vectores en $\R^3$ entonces el conjunto $\{v_1, v_2\}$ también es linealmente dependiente.
+\item Si $A$ es una matriz de $3 \times 3$ entonces la imagen del plano $x+y+z=0$ bajo la transformación $T(x)=Ax$ es un plano.
+\item Si $A_{2\times 2} = (a_{ij}), \quad B_{2\times 3} = (b_{ij}), \quad AB = C = (c_{ij})$ tal que
+$$a_{ij} = (-2)^{i+j}, \quad b_{ij} = (-3)^{i-j}$$
+entonces $c_{23} = -\dfrac{56}{9}$
+\end{enumerate}
 \end{preguntas}
 \end{document}
