Solución de 2019/1/MAT1203/5

--- a/2019/1/MAT1203/5/solucion.tex
+++ b/2019/1/MAT1203/5/solucion.tex
@@ -198,5 +198,21 @@ Recordemos que el que una matriz sea invertible es equivalente a que esta tenga 
 \begin{solucion}
 
 \end{solucion}
+\item Determine si las siguientes afirmaciones son verdaderas o falsas. En caso de ser verdaderas demuéstrelas y si son falsas de un contraejemplo.
+\begin{enumerate}[a)]
+\item Si $\{v_1, v_2, v_3\}$ es un conjunto linealmente dependiente de vectores en $\R^3$ entonces el conjunto $\{v_1, v_2\}$ también es linealmente dependiente.
+\item Si $A$ es una matriz de $3 \times 3$ entonces la imagen del plano $x+y+z=0$ bajo la transformación $T(x)=Ax$ es un plano.
+\item Si $A_{2\times 2} = (a_{ij}), \quad B_{2\times 3} = (b_{ij}), \quad AB = C = (c_{ij})$ tal que
+$$a_{ij} = (-2)^{i+j}, \quad b_{ij} = (-3)^{i-j}$$
+entonces $c_{23} = -\dfrac{56}{9}$
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
