--- a/2019/1/MAT1203/5/solucion.tex
+++ b/2019/1/MAT1203/5/solucion.tex
@@ -198,6 +198,23 @@ Recordemos que el que una matriz sea invertible es equivalente a que esta tenga 
 \begin{solucion}
 
 \end{solucion}
+\item Sea $\mathbb{P} \subset \R^3$ el plano de ecuación $x_1-x_2+1=0$ y sea $T:\R^3 \ra \R^4$ la transformación dada por $T(x) = Ax$, donde
+$$A = \begin{bmatrix}
+1 & 0 & 3\\
+-1 & 1 & 0 \\
+0 & 1 & 3\\
+0 & -2 & -6
+\end{bmatrix}$$
+Demuestre que la imagen del plano $\mathbb{P}$ bajo la transformación $T$ es una recta en $\R^4$.
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\end{solucion}
 \item Determine si las siguientes afirmaciones son verdaderas o falsas. En caso de ser verdaderas demuéstrelas y si son falsas de un contraejemplo.
 \begin{enumerate}[a)]
 \item Si $\{v_1, v_2, v_3\}$ es un conjunto linealmente dependiente de vectores en $\R^3$ entonces el conjunto $\{v_1, v_2\}$ también es linealmente dependiente.
