--- a/2019/1/MAT1610/6/enunciado.tex
+++ b/2019/1/MAT1610/6/enunciado.tex
@@ -108,5 +108,23 @@
 \end{center}
 
 \begin{preguntas}
+\item Para cada una de las siguientes funciones, encontrar sus máximos y mínimos locales, en caso de haber
+\begin{tasks}(2)
+\task $f(x) = x^4 - 8x^2 + 3$
+\task $f(x) = \dfrac{x^2-x-2}{x^2-6x+9}$
+\task $f(x) = e^x(2x^2+x-8)$
+\task $f(x)=x+ln(x^2-1)$
+\end{tasks}
+\item Encuentre los máximos y mínimos de la función
+$$f(x) = \dfrac{|x|}{1+x^2}$$
+en el intervalo $x \in [-3,2]$
+\item Estudiar, según el valor de la constante $k$, los puntos críticos y los puntos de inflexión de la función
+$$f(x) = x^3-3kx^2+12x$$
+\item Probar que la ecuación $1+2x+3x^2+4x^3=0$ tiene solución única.
+\item Sea $f$ una función derivable en $[0, \infty)$, tal que $\forall x \in [0, \infty)(f(2x)=2f(x))$.\\
+Demuestre que
+$$\forall x \in (0, \infty) \exists c > 0 \left(f'(x) = \dfrac{f(x)}{x}\right)$$
+\item Si $f$ es una función dos veces derivable en $[a,b]$ tal que $f(a)=f(b)=0$ y $f(c) > 0$ con $a < c < b$, demuestre que
+$$\exists \alpha \in (a,b) (f''(\alpha) < 0)$$
 \end{preguntas}
 \end{document}
