--- a/2019/1/MAT1610/6/solucion.tex
+++ b/2019/1/MAT1610/6/solucion.tex
@@ -137,18 +137,49 @@ $$f(x) = x^3-3kx^2+12x$$
 \end{solucion}
 \item Probar que la ecuación $1+2x+3x^2+4x^3=0$ tiene solución única.
 \begin{solucion}
+Para demostrar esto debemos hacer dos cosas. En primer lugar, debemos demostrar que la ecuación tiene alguna solución (TVI) y en segundo lugar, debemos demostrar que esta no tiene más de una solución (TVM).\\
 
+Para demostrar que la ecuación tiene alguna solución, definimos la función auxiliar
+$$f(x) = 1+2x+3x^2+4x^3$$
+Al evaluar, podemos ver que
+$$f(0) = 1, \qquad f(-1) = -2$$
+Notemos que $f$ es una función continua en todos los reales. Luego, por TVI, 
+$$\exists c \in (-1,1) \text{ tal que } f(c) = 0$$
+Para demostrar que la ecuación no tiene más de una solución, lo haremos por contradicción. Digamos que la ecuación tiene 2 soluciones, $x_1$ y $x_2$ con $x_1 < x_2$.\\
+
+Luego, $f(x_1) = 0$ y $f(x_2) = 0$. Entonces, por TVM
+$$\exists c \in [x_1, x_2] \text{ tal que } f'(c) = \dfrac{f(x_2) - f(x_1)}{x_2-x_1} = 0$$
+Sin embargo, notemos que
+$$f'(x) = 12x^2 + 6x + 2$$
+Corresponde a una ecuación de segundo grado con determinante 
+$$\Delta = 6^2-4\cdot 12 \cdot 2 = -60 < 0,$$
+por lo que no tiene solución real. Esto es una contradicción con nuestra suposición anterior, por lo que la ecuación no puede tener dos soluciones.\\
+
+En conclusión, la ecuación tiene solución única. 
+$$\blacksquare$$
 \end{solucion}
 \item Sea $f$ una función derivable en $[0, \infty)$, tal que $\forall x \in [0, \infty)(f(2x)=2f(x))$.\\
 Demuestre que
 $$\forall x \in (0, \infty) \exists c > 0 \left(f'(x) = \dfrac{f(x)}{x}\right)$$
 \begin{solucion}
-
+La función $f$ es derivable en el intervalo $[x, 2x]$ para $x \geq 0$. Luego, por TVM,
+$$\exists c \in (x,2x) \text{ tal que } f'(c) = \dfrac{f(2x)-f(x)}{2x-x} = \dfrac{2f(x)-f(x)}{x} = \dfrac{f(x)}{x}$$
+Por lo tanto,
+$$\forall x \in (0, \infty) \exists c > 0 \left(f'(x) = \dfrac{f(x)}{x}\right)$$
+\end{solucion}
 \end{solucion}
 \item Si $f$ es una función dos veces derivable en $[a,b]$ tal que $f(a)=f(b)=0$ y $f(c) > 0$ con $a < c < b$, demuestre que
 $$\exists \alpha \in (a,b) (f''(\alpha) < 0)$$
 \begin{solucion}
-
+Como $f$ es dos veces derivable en $[a,b]$ y $a < c < b$, entonces $f$ cumple con las condiciones del TVM en los intervalos $[a,c]$ y $[c,b]$, Aplicando TVM en ambos, tenemos que
+$$\exists \alpha_1 \in (a,c) \text{ tal que } f'(\alpha_1) = \dfrac{f(c)-f(a)}{c-a} = \dfrac{f(c)}{c-a} > 0$$
+$$\exists \alpha_2 \in (c,b) \text{ tal que } f'(\alpha_2) = \dfrac{f(b)-f(c)}{b-c} = -\dfrac{f(c)}{b-c} < 0$$
+Notemos ahora que 
+$$a < \alpha_1 < c < \alpha_2 < b$$
+Además, como $f''$ es derivable en $[a, b]$, las condiciones del TVM también se cumplen para $f''$ en el intervalo $[\alpha_1, \alpha_2]$. Luego, por TVM,
+$$\exists \alpha \in (\alpha_1, \alpha_2) \text{ tal que } f''(\alpha) = \dfrac{f'(\alpha_2) - f'(\alpha_1)}{\alpha_2 - \alpha_1} < 0$$
+Esto último lo sabemos por los signos de $f'(\alpha_1)$ y $f'(\alpha_2)$ que fueron concluidos anteriormente.
+$$\blacksquare$$
 \end{solucion}
 \end{preguntas}
 \end{document}
