Enunciado de 2019/1/MAT1610/6

--- a/2019/1/MAT1610/6/enunciado.tex
+++ b/2019/1/MAT1610/6/enunciado.tex
@@ -111,11 +111,9 @@
 \item Para cada una de las siguientes funciones, encontrar sus máximos y mínimos locales, en caso de haber
 \begin{tasks}(2)
 \task $f(x) = x^4 - 8x^2 + 3$
-\task $f(x) = \dfrac{x^2-x-2}{x^2-6x+9}$
-\task $f(x) = e^x(2x^2+x-8)$
 \task $f(x)=x+ln(x^2-1)$
 \end{tasks}
-\item Encuentre los máximos y mínimos de la función
+\item Encuentre los máximos y mínimos globales de la función
 $$f(x) = \dfrac{|x|}{1+x^2}$$
 en el intervalo $x \in [-3,2]$
 \item Estudiar, según el valor de la constante $k$, los puntos críticos y los puntos de inflexión de la función
