--- a/2019/1/MAT1203/6/enunciado.tex
+++ b/2019/1/MAT1203/6/enunciado.tex
@@ -108,5 +108,12 @@
 \end{center}
 
 \begin{preguntas}
+\item Encuentre una factorziación $A = LU$ de
+	$$A = \begin{bmatrix}
+	2 & 4 & -1 & 5 & -2 \\
+	-4 & -5 & 3 & -8 & 1 \\
+	2 & -5 & -4 & 1 & 8 \\
+	-6 & 0 & 7 & -3 & 1
+	\end{bmatrix}$$
 \end{preguntas}
 \end{document}
