Enunciado de 2019/1/MAT1203/6

--- a/2019/1/MAT1203/6/enunciado.tex
+++ b/2019/1/MAT1203/6/enunciado.tex
@@ -115,5 +115,29 @@
 	2 & -5 & -4 & 1 & 8 \\
 	-6 & 0 & 7 & -3 & 1
 	\end{bmatrix}$$
+\item Sea una descomposción $PA = LU$ donde
+	$$P = \begin{bmatrix}
+	0 & 0 & 1\\
+	0 & 1 & 0\\
+	1 & 0 & 0
+	\end{bmatrix}, \quad
+	L = \begin{bmatrix}
+	1 & 0 & 0\\
+	-1 & 1 & 0\\
+	0 & 1 & 1
+	\end{bmatrix}, \quad
+	U = \begin{bmatrix}
+	2 & 1 & 0\\
+	0 & 1 & 1\\
+	0 & 0 & -1
+	\end{bmatrix}$$
+	determine usando directamente esta factorización la tercera fila de $A^{-1}$.
+\item Sea $A$ una matriz de $n \times n$ definida por
+	$$a_{i,j} = 
+	\begin{cases}
+	3 \quad si\ i\leq j \\
+	1 \quad si\ i > j
+	\end{cases}$$
+	Calcule $det(A)$.
 \end{preguntas}
 \end{document}
